# RANA

./: CMakeLists.txt  Kmeans_total.py  build_ultimo.ps1  extraerPuntosMejorado.py  puntos_totales.py  sepa_4.py  separar.py  separar_todo.py  uno.py  verificarCapas.py
output/: organo.cpp  viTeta.cpp  visual.cpp  visualDefinitivo.cpp  visualDes.cpp  visualTodo.cpp
test/: kdSinstacing.cpp
